<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange2"
    android:orientation="vertical"
    tools:context=".ui.auth.OtpFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_back_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:backgroundTint="@color/orange2"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_arrow_back_24"
        app:tint="@android:color/white" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="-48dp"
        android:padding="16dp"
        android:src="@drawable/ic_otp" />

    <TextView
        android:id="@+id/txt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-36dp"
        android:layout_marginEnd="16dp"
        android:padding="14dp"
        android:text="@string/otp_desc"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.mukesh.OtpView
        android:id="@+id/otpView"
        style="@style/OtpWidget.OtpView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="number"
        android:itemBackground="@color/orange2"
        android:textColor="@color/white"
        app:OtpHideLineWhenFilled="true"
        app:OtpItemCount="6"
        app:OtpState_filled="true"
        app:OtpViewType="rectangle" />

    <TextView
        android:id="@+id/txt_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/timer"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:text="@string/kode_tidak_ada"
        android:textColor="@color/white"
        android:textSize="18sp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_kirim_ulang"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/kirim_ulang"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="gone"
        app:strokeColor="@android:color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change_number"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ganti_no_hp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="gone"
        app:strokeColor="@android:color/white" />
</LinearLayout>